--- a/WWW/css/styles.css
+++ b/WWW/css/styles.css
@@ -37,11 +37,84 @@ body {
 	max-width: 100%;
 }
 
+#frase {
+	text-align: center;
+}
+
 .encabezado {
 	margin: 0px;
 	background-color: #161616;
 	display: flex;
 	justify-content: center;
+}
+
+.carro {
+	width: 50%;
+}
+
+h1 {
+	display: flex;
+	justify-content: center;
+	margin-top: 0px;
+}
+
+#primeros {
+	width: 98%;
+	margin-left: 1%;
+	margin-right: 1%;
+	border-spacing: 3%;
+}
+
+.primeros3 {
+	width: 100%;
+}
+
+.de3 {
+	width: 100%;
+}
+
+
+.tAuto {
+	width: 98%;
+	margin-left: 1%;
+	margin-right: 1%;
+}
+
+.fAuto {
+	display: block;
+	width: 100%;
+}
+
+.cuerpoAuto {
+	display: flex;
+}
+
+.autos {
+	width: 50%;
+	margin-bottom: -4px;
+}
+
+.autoImagen {
+	width: 100%;
+}
+
+.textoAuto {
+	display: flex;
+	width: 50%;
+	align-items: center;
+	justify-content: center;
+}
+
+.pAuto {
+	text-align: center;
+	margin-left: 10%;
+	margin-right: 10%;
+	font-size: 20px;
+}
+
+#black {
+	font-family: monospace;
+	font-size: 31px;
 }
 
 .pieDePag {
@@ -68,4 +141,41 @@ body {
 	margin-left: 5%;
 	margin-right: 5%;
 	font-size: 25px;
+}
+
+.titulos {
+	margin-top: 15px;
+	text-align: center;
+}
+
+.cuerpo table tr td{
+	position: relative;
+}
+
+.cuerpo table tr td div {
+	position: absolute;
+	top: 0%;
+	left: 0%;
+	bottom: 0%;
+	right: 0%;
+	width: 100%;
+	height: 100%;
+	color: white;
+	font-size: 20px;
+	font-weight: bold;
+	text-align: center;
+	background-color: #16161670;
+	overflow-wrap: break-word;
+	max-width: 100%;
+	max-height: 100%;
+	opacity: 0;
+	transition: opacity 0.3s;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	margin: 0;
+}
+
+.cuerpo table tr td div:hover{
+    opacity: 1;
 }
