--- a/WWW/css/styles.css
+++ b/WWW/css/styles.css
@@ -126,6 +126,24 @@ h1 {
 	justify-content: center;
 }
 
+.liga-izq {
+	color: white;
+	text-decoration: none;
+	margin-right: 20%;
+}
+
+.liga-central {
+	color: white;
+	display: inline-block;
+	text-decoration: none;
+}
+
+.liga-der {
+	color: white;
+	text-decoration: none;
+	margin-left: 20%;
+}
+
 .liga {
 	color: white;
 	text-decoration: none;
@@ -146,6 +164,49 @@ h1 {
 .titulos {
 	margin-top: 15px;
 	text-align: center;
+}
+
+#tFormulario {
+	text-align: center;
+}
+
+#formulario {
+	background-color: #161616;
+	text-decoration: none;
+	color: white;
+	border: 3px solid #161616;
+	padding: 3px;
+	border-radius: 5px;
+}
+
+form div{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	margin-top: 10px;
+}
+
+form div label{
+	margin-right: 10px;
+	font-size: 20px;
+	font-weight: bold;
+}
+
+form div input{
+    margin-right: 2px;
+	border: 4px solid #161616;
+	border-radius: 6px;
+	font-weight: bold;
+}
+
+form div input:focus{
+    border-color: white;
+	outline: 2px solid #161616;
+}
+
+#enviar {
+	margin-bottom: 10px;
+	background-color: white;
 }
 
 .cuerpo table tr td{
